terms and privacy style

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -65,6 +65,10 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	background: $light;
 }
 
+.whitebg {
+	background: #ffffff;
+}
+
 .menu-left {
 	font-family: $font-default;
 	.title {
