--- a/www/templates/privacy.html
+++ b/www/templates/privacy.html
@@ -1,5 +1,11 @@
 <ion-view view-title="Privacy Policy">
-	<ion-content>
+	<ion-nav-bar class="bar-stable nav-title-slide-ios7">
+		<ion-nav-back-button class="button-clear"></ion-nav-back-button>
+	</ion-nav-bar>
+	<ion-nav-title>
+		<img src="img/logo.png" class="title-image" />
+	</ion-nav-title>
+	<ion-content class="whitebg">
 		<div class="padding">
 			<h1>Privacy Policy</h1>
             <p>Privacy Policy
