--- a/www/templates/app_info.html
+++ b/www/templates/app_info.html
@@ -1,7 +1,7 @@
 <ion-view view-title="App Info">
 	<ion-content>
 		<div class="padding">
-			App Info
+			Current Version 0.8.17
 		</div>
 	</ion-content>
 </ion-view>
